// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error route handlers error route CLIENT_ERROR handler handler should return correct values 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "client-error",
      Object {
        "altLang": Array [],
        "clientError": "payload",
        "mssgs": Array [],
        "paymentInProgress": false,
        "uri": Object {
          "new": "/buy/new",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "code": [Function],
      },
    },
  ],
}
`;

exports[`Error route handlers error route SERVER_ERROR handler handler should return correct values 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "server-error",
      Object {
        "altLang": Array [],
        "mssgs": Array [],
        "serverError": "payload",
        "uri": Object {
          "agreed": "/buy/agreed",
          "new": "/buy/new",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "code": [Function],
      },
    },
  ],
}
`;

exports[`Error route handlers error route has a return value with a method of GET and path of /buy/client-error and /buy/server-error 1`] = `
Array [
  Object {
    "handler": [Function],
    "method": Array [
      "GET",
    ],
    "path": "/buy/client-error",
  },
  Object {
    "handler": [Function],
    "method": Array [
      "GET",
    ],
    "path": "/buy/server-error",
  },
]
`;
